Merge branch 'master' of https://github.com/erginrusheku/demo7 into Erion
 Conflicts:
	src/main/java/group/demo7/service/DepartmentsServiceImpl.java